style: detail_film

--- a/filme/templates/home_filmes.html
+++ b/filme/templates/home_filmes.html
@@ -6,6 +6,62 @@ HomeFilmes
 {% endblock %}
 
 {% block content %}
+
+
+<main class='bg-primary_black min-h-screen w-full'>
+    <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{% static 'images/background_netflix.jpg' %}');"">
+        <div>
+            <h2 class="text-6xl font-semibold text-white my-4">
+                {{object.title}}
+            </h2>
+            <p class=" w-11/12 md:w-5/12 font-medium text-white my-4">
+                {{object.description}}
+            </p>
+            <div class="flex my-4">
+                <a href="#">
+                    <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
+                        <ion-icon name="play" class="text-2xl"></ion-icon>
+                        <span class="ml-3 font-medium " >
+                            Play
+                        </span>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section> 
+
+
+    <section class='bg-primary_black flex justify-center py-10'>
+        <div class="p-8 w-10/12 relative" >
+            <h2 class="text-gray-200 text-2xl font-medium">
+                Novo
+            </h2>
+            <div class="wrapper">
+              <section id="section1" class="flex flex-nowrap items-center justify-center space-x-8">
+                <a href="#section2" class="arrow__btn text-6xl page">‹</a>
+                  <div class="item h-64 w-1/4 m-4">
+                      <a href="#">
+                        <img src="#" class="rounded-md w-full h-full object-cover">
+                      </a>
+                  </div>
+                    <a href="#section2" class="arrow__btn text-6xl">›</a>
+              </section>
+                  <section id="section2" class="flex flex-nowrap items-center justify-center">
+                    <a href="#section1" class="arrow__btn text-6xl">‹</a>
+                      <div class="item h-64 w-1/4 m-4">
+                          <a href="#">
+                            <img src="#" class="rounded-md w-full h-full object-cover">
+                          </a>
+                      </div>
+                    <a href="#section1" class="arrow__btn text-6xl">›</a>
+                  </section>
+            </div>
+
+
+        </div>
+    </section>
+
+</main>
 <div class='py-20'>
     {% for filme in object_list %}
     {% comment %} <hr> {% endcomment %}
@@ -16,4 +72,46 @@ HomeFilmes
     <img src="{{filme.thumb.url}}">    
     {% endfor %}
 </div>
+<div class='py-20'>
+    <h2>Filmes Relacionados</h2>
+    {% comment %} {%for film in film_relations %}
+    <p>
+        <a href="{% url 'filme:detail_film' filme.pk %}">
+         {{film.title}}
+        </a> {% endcomment %}
+    </p>
+    {% for film in film_relations %}
+    <p>
+        <a href="{% url 'filme:detail_film' film.id %}">
+            {{ film.title }}
+        </a>
+    </p>
+{% comment %} {% endfor %} {% endcomment %}
+
+    {% endfor %}
+</div>
+<div class='py-20'>
+    <h2>Filmes Recentes</h2>
+    {% comment %} {%for film in film_relations %}
+    <p>
+        <a href="{% url 'filme:detail_film' filme.pk %}">
+         {{film.title}}
+        </a> {% endcomment %}
+    <p>
+            {{list_recent_movie }}
+    </p>
+{% comment %} {% endfor %} {% endcomment %}
+
+</div>
+
+<div class='py-20'>
+    <h2>Filmes em alta</h2>
+
+    <p>
+            {{list_recent_movie }}
+    </p>
+
+</div>
+
+
 {% endblock %}
