--- a/filme/templates/detail_film.html
+++ b/filme/templates/detail_film.html
@@ -6,59 +6,76 @@ HomeFilmes
 {% endblock %}
 
 {% block content %}
-<div class='py-20'>
-    <h2>Detalhe do filme</h2>
-    <p>{{object.title}}</p>
-    {{object.description}}
 
-    <img src="{{object.thumb.url}}">    
+<main class='bg-primary_black min-h-screen w-full'>
+    <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{{object.thumb.url}}');">
+        <div>
+            <h2 class="text-6xl font-semibold text-white my-4">
+                {{object.title}}
+            </h2>
+            <p class=" w-11/12 md:w-5/12 font-medium text-white my-4">
+                {{object.description | slice:":50" }}...
+            </p>
+            <div class="flex my-4">
+                <a href="{{object.episodios.first.link}}">
+                    <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
+                        <ion-icon name="play" class="text-2xl"></ion-icon>
+                        <span class="ml-3 font-medium " >
+                            Play
+                        </span>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </section> 
+    <section class='bg-primary_black flex justify-center py-10'>
+        <div class="p-8 w-10/12 relative" >
+            <h2 class="text-gray-200 text-3xl font-medium">
+                Descrição
+            </h2>
+            <div class="flex justify-left  items-center min-w-full  movie_lis">
+                <p class="text-gray-100 text-lg">
+                    {{object.description}}
+                </p>
+            </div>
 
-    <h2>Episódios</h2>
-    {%for episodios in object.episodios.all %}
-    <a href="{{episodios.link}}">
-        <p> Episodio {{forloop.counter}}: {{episodios}}</p>
-    </a>
-    {% endfor %}
-</div>
-<div class='py-20'>
-    <h2>Filmes Relacionados</h2>
-    {% comment %} {%for film in film_relations %}
-    <p>
-        <a href="{% url 'filme:detail_film' filme.pk %}">
-         {{film.title}}
-        </a> {% endcomment %}
-    </p>
-    {% for film in film_relations %}
-    <p>
-        <a href="{% url 'filme:detail_film' film.id %}">
-            {{ film.title }}
-        </a>
-    </p>
-{% comment %} {% endfor %} {% endcomment %}
+            <div style='margin-top:2rem;margin-bottom:2rem;'>
+                <h2 class="text-gray-200 text-3xl font-medium">
+                    Episódios
 
-    {% endfor %}
-</div>
-<div class='py-20'>
-    <h2>Filmes Recentes</h2>
-    {% comment %} {%for film in film_relations %}
-    <p>
-        <a href="{% url 'filme:detail_film' filme.pk %}">
-         {{film.title}}
-        </a> {% endcomment %}
-    <p>
-            {{list_recent_movie }}
-    </p>
-{% comment %} {% endfor %} {% endcomment %}
+                </h2>
+                {%for episodios in object.episodios.all %}
 
-</div>
+                <h3 class='text-lg'>
+                    <a href="{{episodios.link}}">
+                        <p> Episodio {{forloop.counter}}: {{episodios}}</p>
+                    </a>
+                    </h3>
+                    {%endfor%}
 
-<div class='py-20'>
-    <h2>Filmes em alta</h2>
+            </div>
 
-    <p>
-            {{list_recent_movie }}
-    </p>
+        </div>
+    </section>
+    <section class='bg-primary_black flex justify-center py-10'>
+        <div class="p-8 w-10/12 relative" >
+            <h2 class="text-gray-200 text-2xl font-medium">
+                Relacionados
+            </h2>
+            <div class="flex flex-wrap items-center min-w-full movie_lis">
+                {% for film in film_relations %}
 
-</div>
+                <div class="m-4 bg-blue-500 overflow-hidden flex-shrink-0 rounded-md cursor-pointer h-64 w-96">
+                    <a href="{% url 'filme:detail_film' film.id %}">
+                            <img src="{{ film.thumb.url }}" class="object-cover w-full h-full " alt="">
+                    </a>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+
+</main>
+
 
 {% endblock %}
