style: home_film carousel

--- a/filme/templates/home_filmes.html
+++ b/filme/templates/home_filmes.html
@@ -4,18 +4,91 @@
 {% block titulo %}
 HomeFilmes
 {% endblock %}
+{% block head %}
+<style>
+    $itemGrow: 1.2;
+$duration: 250ms;
 
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  background-color: #000;
+}
+
+h1 {
+  font-family: Arial;
+  color: red;
+  text-align: center;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(3,100%);
+  overflow:hidden;
+  scroll-behavior: smooth;
+
+  section {
+    width: 100%;
+    position: relative;
+    margin: 20px 0;
+
+    .item {
+      padding: 0 2px;
+      transition: $duration all;
+
+      &:hover {
+        margin: 0 40px;
+        transform: scale(1.2);
+      }
+
+    }
+    
+    a {
+      /* position: absolute; */
+      color: #fff;
+      text-decoration: none;
+      font-size: 6em;
+      background:rgb(0,0,0);
+      text-align: center;
+      z-index: 1;
+
+    }
+
+    &>a:first-child {
+      position: absolute;
+        left:0;
+        background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+      }
+      &>a:last-child {
+        position: absolute;
+        right: 0;
+        background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+      }
+  }
+}
+
+// Remove the arrow for Mobile
+@media only screen and (max-width: 600px) {
+  a.arrow__btn {
+    display:none;
+  }
+}
+</style>
+{%endblock %}
 {% block content %}
 
 
 <main class='bg-primary_black min-h-screen w-full'>
-    <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{% static 'images/background_netflix.jpg' %}');"">
+    <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{% static 'images/background_netflix.jpg' %}');">
         <div>
             <h2 class="text-6xl font-semibold text-white my-4">
-                {{object.title}}
+                {{object.title}} Titulo
             </h2>
             <p class=" w-11/12 md:w-5/12 font-medium text-white my-4">
-                {{object.description}}
+                {{object.description}} descricao
             </p>
             <div class="flex my-4">
                 <a href="#">
@@ -39,79 +112,79 @@ HomeFilmes
             <div class="wrapper">
               <section id="section1" class="flex flex-nowrap items-center justify-center space-x-8">
                 <a href="#section2" class="arrow__btn text-6xl page">‹</a>
-                  <div class="item h-64 w-1/4 m-4">
-                      <a href="#">
-                        <img src="#" class="rounded-md w-full h-full object-cover">
+                {% for filme in list_recent_movie%}
+                {%if forloop.counter < 4%}
+
+                <div class="item h-64 w-1/4 m-4">
+                      <a href="{% url 'filme:detail_film' filme.id %}">
+                        <img src="{{filme.thumb.url}}" class="rounded-md w-full h-full object-cover">
                       </a>
                   </div>
+                  {% endif %}
+                  {% endfor %}
                     <a href="#section2" class="arrow__btn text-6xl">›</a>
               </section>
+              {% if list_recent_movie|length > 4 %}
                   <section id="section2" class="flex flex-nowrap items-center justify-center">
                     <a href="#section1" class="arrow__btn text-6xl">‹</a>
-                      <div class="item h-64 w-1/4 m-4">
-                          <a href="#">
-                            <img src="#" class="rounded-md w-full h-full object-cover">
+                    {% for filme in list_recent_movie%}
+                    {%if forloop.counter > 4%}
+                    <div class="item h-64 w-1/4 m-4">
+                          <a href="{% url 'filme:detail_film' filme.id %}">
+                            <img src="{{filme.thumb.url}}" class="rounded-md w-full h-full object-cover">
                           </a>
                       </div>
+                      {% endif %}
+                      {% endfor %}
                     <a href="#section1" class="arrow__btn text-6xl">›</a>
-                  </section>
+                </section>
+                {%endif%}
             </div>
 
 
         </div>
     </section>
 
+    <section class='bg-primary_black flex justify-center py-10'>
+        <div class="p-8 w-10/12 relative" >
+            <h2 class="text-gray-200 text-2xl font-medium">
+                Em alta
+            </h2>
+            <div class="wrapper">
+              <section id="section1_alta" class="flex flex-nowrap items-center justify-center space-x-8">
+                <a href="#section2_alta" class="arrow__btn text-6xl page">‹</a>
+                {% for filme in list_trending_movie%}
+                {%if forloop.counter < 4%}
+
+                <div class="item h-64 w-1/4 m-4">
+                      <a href="{% url 'filme:detail_film' filme.id %}">
+                        <img src="{{filme.thumb.url}}" class="rounded-md w-full h-full object-cover">
+                      </a>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
+                    <a href="#section2_alta" class="arrow__btn text-6xl">›</a>
+              </section>
+              {% if list_trending_movie|length > 4 %}
+                  <section id="section2_alta" class="flex flex-nowrap items-center justify-center">
+                    <a href="#section1_alta" class="arrow__btn text-6xl">‹</a>
+                    {% for filme in list_trending_movie%}
+                    {%if forloop.counter > 4%}
+                    <div class="item h-64 w-1/4 m-4">
+                          <a href="{% url 'filme:detail_film' filme.id %}">
+                            <img src="{{filme.thumb.url}}" class="rounded-md w-full h-full object-cover">
+                          </a>
+                      </div>
+                      {% endif %}
+                      {% endfor %}
+                    <a href="#section1_alta" class="arrow__btn text-6xl">›</a>
+                </section>
+                {%endif%}
+            </div>
+
+
+        </div>
+    </section>
 </main>
-<div class='py-20'>
-    {% for filme in object_list %}
-    {% comment %} <hr> {% endcomment %}
-    <a href="{% url 'filme:detail_film' filme.id %}">
-    <p>{{filme.title}}</p>
-    </a>
-    <p>{{filme.description}}</p>
-    <img src="{{filme.thumb.url}}">    
-    {% endfor %}
-</div>
-<div class='py-20'>
-    <h2>Filmes Relacionados</h2>
-    {% comment %} {%for film in film_relations %}
-    <p>
-        <a href="{% url 'filme:detail_film' filme.pk %}">
-         {{film.title}}
-        </a> {% endcomment %}
-    </p>
-    {% for film in film_relations %}
-    <p>
-        <a href="{% url 'filme:detail_film' film.id %}">
-            {{ film.title }}
-        </a>
-    </p>
-{% comment %} {% endfor %} {% endcomment %}
-
-    {% endfor %}
-</div>
-<div class='py-20'>
-    <h2>Filmes Recentes</h2>
-    {% comment %} {%for film in film_relations %}
-    <p>
-        <a href="{% url 'filme:detail_film' filme.pk %}">
-         {{film.title}}
-        </a> {% endcomment %}
-    <p>
-            {{list_recent_movie }}
-    </p>
-{% comment %} {% endfor %} {% endcomment %}
-
-</div>
-
-<div class='py-20'>
-    <h2>Filmes em alta</h2>
-
-    <p>
-            {{list_recent_movie }}
-    </p>
-
-</div>
-
 
 {% endblock %}
