--- a/filme/templates/home_filmes.html
+++ b/filme/templates/home_filmes.html
@@ -82,16 +82,16 @@ h1 {
 
 
 <main class='bg-primary_black min-h-screen w-full'>
-    <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{% static 'images/background_netflix.jpg' %}');">
+    <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex items-end bg-cover" style="background-image: url('{{movie_destaque.thumb.url}}');">
         <div>
             <h2 class="text-6xl font-semibold text-white my-4">
-                {{object.title}} Titulo
+                {{movie_destaque.title}} 
             </h2>
             <p class=" w-11/12 md:w-5/12 font-medium text-white my-4">
-                {{object.description}} descricao
+                {{movie_destaque.description}} 
             </p>
             <div class="flex my-4">
-                <a href="#">
+                <a href="{% url 'filme:detail_film' movie_destaque.pk %}">
                     <button class="flex items-center bg-white py-2 px-5 rounded-md" style='color:black;'>
                         <ion-icon name="play" class="text-2xl"></ion-icon>
                         <span class="ml-3 font-medium " >
@@ -151,8 +151,8 @@ h1 {
                 Em alta
             </h2>
             <div class="wrapper">
-              <section id="section1_alta" class="flex flex-nowrap items-center justify-center space-x-8">
-                <a href="#section2_alta" class="arrow__btn text-6xl page">‹</a>
+              <section id="section1_emaalta" class="flex flex-nowrap items-center justify-center space-x-8">
+                <a href="#section2" class="arrow__btn text-6xl page">‹</a>
                 {% for filme in list_trending_movie%}
                 {%if forloop.counter < 4%}
 
@@ -163,11 +163,11 @@ h1 {
                   </div>
                   {% endif %}
                   {% endfor %}
-                    <a href="#section2_alta" class="arrow__btn text-6xl">›</a>
+                    <a href="#section2" class="arrow__btn text-6xl">›</a>
               </section>
               {% if list_trending_movie|length > 4 %}
-                  <section id="section2_alta" class="flex flex-nowrap items-center justify-center">
-                    <a href="#section1_alta" class="arrow__btn text-6xl">‹</a>
+                  <section id="section2" class="flex flex-nowrap items-center justify-center">
+                    <a href="#section1_emaalta" class="arrow__btn text-6xl">‹</a>
                     {% for filme in list_trending_movie%}
                     {%if forloop.counter > 4%}
                     <div class="item h-64 w-1/4 m-4">
@@ -177,7 +177,7 @@ h1 {
                       </div>
                       {% endif %}
                       {% endfor %}
-                    <a href="#section1_alta" class="arrow__btn text-6xl">›</a>
+                    <a href="#section1_emaalta" class="arrow__btn text-6xl">›</a>
                 </section>
                 {%endif%}
             </div>
