--- a/filme/templates/home_filmes.html
+++ b/filme/templates/home_filmes.html
@@ -185,6 +185,51 @@ h1 {
 
         </div>
     </section>
+    <section class='bg-primary_black flex justify-center py-10'>
+      <div class="p-8 w-10/12 relative" >
+          <h2 class="text-gray-200 text-2xl font-medium">
+              Filmes vistos
+          </h2>
+          <div class="wrapper">
+            <section id="section1_vistos" class="flex flex-nowrap items-center justify-center space-x-8">
+              <a href="#section2_vistos" class="arrow__btn text-6xl page">‹</a>
+              {% for filme in request.user.film_previw.all%}
+              {%if forloop.counter < 4%}
+
+              <div class="item h-64 w-1/4 m-4">
+                    <a href="{% url 'filme:detail_film' filme.id %}">
+                      <img src="{{filme.thumb.url}}" class="rounded-md w-full h-full object-cover">
+                    </a>
+                </div>
+                {% endif %}
+                {% endfor %}
+                  <a href="#section2_vistos" class="arrow__btn text-6xl">›</a>
+            </section>
+            {% if request.user.film_previw.all|length > 4 %}
+                <section id="section2_vistos" class="flex flex-nowrap items-center justify-center">
+                  <a href="#section1_vistos" class="arrow__btn text-6xl">‹</a>
+                  {% for filme in request.user.film_previw.all%}
+                  {%if forloop.counter > 4%}
+                  <div class="item h-64 w-1/4 m-4">
+                        <a href="{% url 'filme:detail_film' filme.id %}">
+                          <img src="{{filme.thumb.url}}" class="rounded-md w-full h-full object-cover">
+                        </a>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                  <a href="#section1_vistos" class="arrow__btn text-6xl">›</a>
+              </section>
+              {%endif%}
+          </div>
+
+
+      </div>
+  </section>
+  <section>
+    {{request.user.film_previw.all}}
+  </section>
+  
+
 </main>
 
 {% endblock %}
