--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,29 +7,43 @@
         </a>
 
     </div>
-    <div class ="w-6/12 flex flex-nowrap justify-end"> 
-        <div class= 'mr-2'>
-            <form method='get' action="{%url 'filme:pesquisa'%}"> 
-                <input type="text" class="py-1 px-2 rounded-md text-black" name='query' placeholder="Pesquisar...">
-                <input type="submit" value=''>
-            </form>
-        </div>
-        <div class= 'mr-2'>
-            <a href="#">
-                <button class="bg-red-600 text-white py-1  px-3 rounded-md">
-                    Login
-                </button>
-            </a>
-        </div>
-        <div class= 'mr-2'>
-            <a href="#">
 
+    <div class ="w-6/12 flex flex-nowrap justify-end"> 
+        {% if user.is_authenticated %}
+            <div class= 'mr-2'>
+                <form method='get' action="{%url 'filme:pesquisa'%}"> 
+                    <input type="text" class="py-1 px-2 rounded-md text-black" name='query' placeholder="Pesquisar...">
+                    <input type="submit" value=''>
+                </form>
+            </div>
+        {% endif %}
+
+        <div class= 'mr-2'>
+        {% if user.is_authenticated %}
+                <a href="{%url 'filme:logout'%}">
+                    <button class="bg-red-600 text-white py-1  px-3 rounded-md">
+                        Sair
+                    </button>
+                </a>
+        {% else %}
+            
+                <a href="{%url 'filme:login'%}">
+                    <button class="bg-red-600 text-white py-1  px-3 rounded-md">
+                        Login
+                    </button>
+                </a>
+        {% endif %}
+
+            </div>
+        {% if user.is_authenticated %}
+        <div class= 'mr-2'>
+            <a href="{%url 'filme:update'%}">
                 <button class="bg-red-600 text-white py-1 px-3 rounded-md">
                     Editar perfil
                 </button>
             </a>
         </div>
+    {% endif %}
     </div>
-
 
 </nav>
