--- a/netflix/templates/navbar.html
+++ b/netflix/templates/navbar.html
@@ -36,7 +36,7 @@
             </div>
         {% if user.is_authenticated %}
         <div class= 'mr-2'>
-            <a href="{%url 'filme:update'%}">
+            <a href="{%url 'filme:update' user.id %}">
                 <button class="bg-red-600 text-white py-1 px-3 rounded-md">
                     Editar perfil
                 </button>
