--- a/netflix/filme/templates/homepage.html
+++ b/netflix/filme/templates/homepage.html
@@ -9,7 +9,7 @@ HomePage Hashflix
     #id_email{
         width: 100%;
         color: #000;
-        padding: 5px 5px;
+        padding: 5px 50px 20px;
     }
     #input{
         width: 100%%
