--- a/netflix/filme/templates/login.html
+++ b/netflix/filme/templates/login.html
@@ -5,6 +5,14 @@
 {% block titulo %}
 Fazer Login
 {% endblock %}
+{% block head %}
+<style>
+    .form-group{
+        width:100%;
+    }
+
+</style>
+{% endblock  %}
 
 {% block content %}
     <header class="min-h-screen bg-black bg-opacity-75 bg-blend-overlay showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat"  style="background-image: url('{% static 'images/background_netflix.jpg' %}');">
